Adjusts IT to work as expected